--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "concurrently": "^3.4.0",
+    "howler": "^2.0.3",
+    "material-ui": "^0.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-motion": "^0.5.0"
+    "react-motion": "^0.5.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "three": "^0.85.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.5"
