--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "concurrently": "^3.4.0",
+    "gsap": "^1.19.1",
     "howler": "^2.0.3",
     "material-ui": "^0.18.1",
+    "mo-js": "^0.288.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-motion": "^0.5.0",
     "react-tap-event-plugin": "^2.0.1",
+    "react-transition-group": "^1.1.3",
     "three": "^0.85.2"
   },
   "devDependencies": {
